{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 42,
  "lineage": "64deeefa-b152-485e-7d7f-2d050c2903f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525993203459:internet-gateway/igw-0f627bab684c4773a",
            "id": "igw-0f627bab684c4773a",
            "owner_id": "525993203459",
            "vpc_id": "vpc-0f3289e9bd6284cd3"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:525993203459:loadbalancer/app/test-lb-tf/acf3d8edaac92a8c",
            "arn_suffix": "app/test-lb-tf/acf3d8edaac92a8c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-1363424493.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:525993203459:loadbalancer/app/test-lb-tf/acf3d8edaac92a8c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0ca8a4fdaf10543a8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02569a12080da5765"
              },
              {
                "subnet_id": "subnet-0cd99a9e24f7406e5"
              }
            ],
            "subnets": [
              "subnet-02569a12080da5765",
              "subnet-0cd99a9e24f7406e5"
            ],
            "tags": {
              "Environment": "Development"
            },
            "tags_all": {
              "Environment": "Development"
            },
            "vpc_id": "vpc-0f3289e9bd6284cd3",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.web_vpc",
            "aws_security_group.allow_elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:525993203459:listener/app/test-lb-tf/acf3d8edaac92a8c/77cb24b173872593",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:525993203459:targetgroup/tf-example-lb-tg/15aecb12b3f219ff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:525993203459:listener/app/test-lb-tf/acf3d8edaac92a8c/77cb24b173872593",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:525993203459:loadbalancer/app/test-lb-tf/acf3d8edaac92a8c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadbalancer",
            "aws_lb_target_group.lb_target",
            "aws_security_group.allow_elb",
            "aws_subnet.public_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:525993203459:targetgroup/tf-example-lb-tg/15aecb12b3f219ff",
            "arn_suffix": "targetgroup/tf-example-lb-tg/15aecb12b3f219ff",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:525993203459:targetgroup/tf-example-lb-tg/15aecb12b3f219ff",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f3289e9bd6284cd3"
          },
          "dependencies": [
            "aws_security_group.allow_elb",
            "aws_subnet.public_subnet",
            "aws_vpc.web_vpc",
            "aws_lb.loadbalancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525993203459:route-table/rtb-0e8a8fa123448b0a4",
            "id": "rtb-0e8a8fa123448b0a4",
            "owner_id": "525993203459",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f627bab684c4773a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Route Table"
            },
            "tags_all": {
              "Name": "Public Subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3289e9bd6284cd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccdca658f0ae7908",
            "route_table_id": "rtb-0e8a8fa123448b0a4",
            "subnet_id": "subnet-0cd99a9e24f7406e5"
          },
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0120cb3b5209aec93",
            "route_table_id": "rtb-0e8a8fa123448b0a4",
            "subnet_id": "subnet-02569a12080da5765"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.web_vpc",
            "aws_internet_gateway.web_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525993203459:security-group/sg-08b694fc819927fc3",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b694fc819927fc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ecs",
            "name_prefix": "",
            "owner_id": "525993203459",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ecs"
            },
            "tags_all": {
              "Name": "allow_ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3289e9bd6284cd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525993203459:security-group/sg-0ca8a4fdaf10543a8",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca8a4fdaf10543a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_elb",
            "name_prefix": "",
            "owner_id": "525993203459",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_elb"
            },
            "tags_all": {
              "Name": "allow_elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3289e9bd6284cd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525993203459:security-group/sg-05f2744e261755abb",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f2744e261755abb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "525993203459",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3289e9bd6284cd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525993203459:subnet/subnet-08bea997203d22ca6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bea997203d22ca6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "525993203459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0f3289e9bd6284cd3"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525993203459:subnet/subnet-0d35c1571dc79eca8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d35c1571dc79eca8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "525993203459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0f3289e9bd6284cd3"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525993203459:subnet/subnet-0cd99a9e24f7406e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd99a9e24f7406e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "525993203459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0f3289e9bd6284cd3"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525993203459:subnet/subnet-02569a12080da5765",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02569a12080da5765",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "525993203459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0f3289e9bd6284cd3"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:525993203459:vpc/vpc-0f3289e9bd6284cd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0dd46f5ab60cd5a92",
            "default_route_table_id": "rtb-074a5509935d81362",
            "default_security_group_id": "sg-0fd28d71930950bcd",
            "dhcp_options_id": "dopt-0c192aa6bdd0fe289",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f3289e9bd6284cd3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074a5509935d81362",
            "owner_id": "525993203459",
            "tags": {
              "Name": "Web VPC"
            },
            "tags_all": {
              "Name": "Web VPC"
            }
          }
        }
      ]
    }
  ]
}